# funp

./: build.sh  package-lock.json  package.json  pyproject.toml  render.yaml  requirements.txt
src/: db.sqlite3
src/contacthub/: settings.py  urls.py
src/contacts/: admin.py  forms.py  models.py  views.py
src/contacts/migrations/: 0001_initial.py  0002_contact.py  0003_contact_document.py
src/contacts/static/css/: output.css
src/contacts/templates/: base.html  contacts.html
src/contacts/templates/partials/: add-contact-modal.html  contact-list.html  contact-row.html
