[project]
name = "funp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dj-database-url>=3.0.0",
    "django>=5.2.2",
    "django-extensions>=4.1",
    "django-storages[s3]>=1.14.6",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "uvicorn>=0.35.0",
    "whitenoise[brotli]>=6.9.0",
]
